Fixed the background prioble, plus added alignment. Missing font styling

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,6 +1,5 @@
 .container {
   padding-bottom: $mobile-navbar-height;
-  background-color: white;
 }
 
 #pages-home .container-custom {
@@ -18,7 +17,6 @@
 #events-show .container-custom {
   padding: $mobile-top-navbar-height 0 $mobile-navbar-height;
   max-width: 100vw;
-  background-color: white;
 }
 
 .container-banner {
